# webster

./: .gitignore  .lighthouserc.json  package-lock.json  package.json  pyproject.toml
api/: agent.py  agent_tools.py  constants.py  main.py  modal_app.py  models.py
app/: dashboard.tsx  globals.css  layout.tsx  login.tsx  page.tsx
app/api/backend/[...path]/: route.ts
app/api/ping/: route.ts
app/auth/callback/: route.ts
app/auth/start/: route.ts
app/components/: add-entry-form.tsx  button-link.tsx  button.tsx  card.tsx  chat.tsx  diagnostic-card.tsx  diagnostic-list.tsx  github-app-modal.tsx  input.tsx  toggle.tsx  verification-settings.tsx  website-entry.tsx  website-list.tsx
backend/: agent.py  agent_tools.py  auth.py  constants.py  main.py  models.py  verification.py
public/: robots.txt  sitemap.xml
