[project]
name = "webster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.129.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.8",
    "modal>=1.3.3",
    "pyjwt>=2.10.1",
    "playwright>=1.58.0",
    "requests>=2.32.5",
    "sqlmodel>=0.0.34",
]
